test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_restricted_currency_test_old.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:a2065b021b1f78f345198ba1e82a28b7b32e7e2714f4441ef66a06093913bdf8
size 5509
